[package]
name = "tommy"
version = "0.1.0"
edition = "2024"
description = "Simple toml parser built to parse .toml configuration files"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
license = "MIT"
repository = "https://github.com/simon-danielsson/tommy"
keywords = ["toml", "parser", "utility", "utils", "config", "crate", "library" ]
exclude = ["media/"]
readme = "README.md"

[lib]
name = "tommy"

[dependencies]


