[package]
name = "tommy"
version = "0.1.3"
edition = "2024"
description = "Simple toml parser built to parse configuration files for rust projects"
authors = ["Simon Danielsson <contact@simondanielsson.se>"]
license = "MIT"
repository = "https://github.com/simon-danielsson/tommy"
keywords = ["toml", "parser", "utility", "config"]
homepage = "https://www.simondanielsson.se"
exclude = ["media/"]
readme = "README.md"
rust-version = "1.88.0"

[lib]
name = "tommy"

[dependencies]


